# test1

code/: CMakeLists.txt
code/include/: developer.h  developer_group.h  group_logo.h
code/src/: developer.c  developer_group.c  group_logo.c  main.c
